# robovision_Dr_Gear

./: CHANGELOG.txt.txt  LICENSE  README.md  README.txt.txt  pyproject.toml
docs/: api_reference.md  math_notes.md
robovision.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
robovision/features/: color_moments.py  sift.py
robovision/filters/: edge_detection.py  filters.py  thresholding.py
robovision/io/: image_io.py
robovision/transforms/: flip.py  resize.py  rotate.py  translate.py
robovision/utils/: convolution.py  text_placement.py
robovision_Dr_Gear.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_drawing.ipynb  test_features.ipynb  test_image_io_1_final.ipynb
